# learning

./: .gitignore  README.md  SUMMARY.md  deep-learning.md
cpp_yandex_specialization/red_belt/week1/comparator_generator/: CMakeLists.txt  airline_ticket.h  sort_by.cpp
cpp_yandex_specialization/red_belt/week1/deque/: deque.h  main.cc
cpp_yandex_specialization/red_belt/week1/ebook/: fast.cpp  slow.cpp
cpp_yandex_specialization/red_belt/week1/paginator/: paginator.cpp
cpp_yandex_specialization/white_belt/week1/equation/: main.cpp
cpp_yandex_specialization/white_belt/week1/minimal_str/: main.cpp
cpp_yandex_specialization/white_belt/week1/nod/: main.cpp
cpp_yandex_specialization/white_belt/week1/second_enter_f/: main.cpp
cpp_yandex_specialization/white_belt/week1/to_binary/: main.cpp
cpp_yandex_specialization/white_belt/week2/: main.cpp
cpp_yandex_specialization/white_belt/week2/buses_database/: main.cpp
cpp_yandex_specialization/white_belt/week2/buses_database2/: main.cpp
cpp_yandex_specialization/white_belt/week2/buses_database3/: main.cpp
cpp_yandex_specialization/white_belt/week2/synonims/: main.cpp
cpp_yandex_specialization/white_belt/week3/names_family/: main.cpp
cpp_yandex_specialization/white_belt/week4/LectureTitle/: main.cpp
cpp_yandex_specialization/white_belt/week4/function/: main.cpp
cpp_yandex_specialization/white_belt/week4/rational/: main.cpp
cpp_yandex_specialization/white_belt/week5/: CMakeLists.txt  main.cpp
cpp_yandex_specialization/yellow_belt/final/: CMakeLists.txt  main.cpp
cpp_yandex_specialization/yellow_belt/final/include/: condition_parser.h  database.h  date.h  node.h  token.h
cpp_yandex_specialization/yellow_belt/final/src/: condition_parser.cpp  database.cpp  date.cpp  node.cpp  token.cpp
cpp_yandex_specialization/yellow_belt/final/test/: condition_parser_test.cpp  parser_test.cpp  test_1.cpp
cpp_yandex_specialization/yellow_belt/week1/block_mass/: main.cpp
cpp_yandex_specialization/yellow_belt/week1/ref_to_element/: main.cpp
cpp_yandex_specialization/yellow_belt/week1/template_square/: main.cpp
cpp_yandex_specialization/yellow_belt/week2/decomposition/: _889d5f03c308eeac67b75b9072b0f0ca_starter.cpp
cpp_yandex_specialization/yellow_belt/week2/palindrom_tests/: test_palindrome.cpp
deeplearning/Conv_Nets/week1/: Convolution_model_Application_v1a.ipynb  Convolution_model_Step_by_Step_v2a.ipynb
deeplearning/Improving_Deep_Neural_Networks/week6/: Optimization_methods_v1b.ipynb
deeplearning/Improving_Deep_Neural_Networks/week7/: TensorFlow_Tutorial_v3b.ipynb
docs/: README.md  algorithms-and-data-structures.md
ros_industrial_training/: .gitignore
ros_industrial_training/docker/: Dockerfile  run.sh
sdc_course_ydx/seminar01-localization/: seminar1_hw_particle_filter.ipynb  seminar1_localization.ipynb
sdc_course_ydx/seminar01-localization/sdc/: kalman_filter.py  sensor_landmark.py
sdc_course_ydx/seminar02-graph-slam/code/: constraint_builder_interface.py  graph_elements.py  optimization.py
sdc_course_ydx/seminar05-planning/: seminar_optimization.ipynb
(+63 files in other folders)
